--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -84,6 +84,17 @@ nav {
     height: 300px;
 }
 
+.image4 {
+    border-style: solid;
+    border-width: 2px;
+    margin-top: 20px;
+    margin-right: 2px;
+    margin-left: 2px;
+    display: flex;
+    width: 300px;
+    height: 300px;
+}
+
 .overmijtext {
     color: #CAE8D5;
     text-align: center;
@@ -148,4 +159,19 @@ nav {
 .script-showcase-container {
     margin-top:20px;
     display: flex;
+}
+
+.highlights-ondertext {
+    color: #CAE8D5;
+    text-align: center;
+    margin: auto;
+    margin-top: 20px;
+    font-family: 'Trebuchet MS';
+    font-size: 25px;
+}
+
+.highlights-text-container {
+    width: 1150px;
+    margin: auto;
+    background-color: #204051;
 }
