--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -175,3 +175,87 @@ nav {
     margin: auto;
     background-color: #204051;
 }
+
+.bar-container {
+    margin-top: 50px;
+    background-color: #204051;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ddd;
+}
+
+.skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+}
+
+.csharp {
+    padding-right: 10px;
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    width: 90%;
+    background-color: #04AA6D;
+}
+.html {
+    padding-right: 10px;
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    width: 75%;
+    background-color: #2196F3;
+}
+.css {
+    padding-right: 10px;
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    width: 70%;
+    background-color: #f44336;
+}
+.python {
+    padding-right: 10px;
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    width: 50%;
+    background-color: #808080;
+}
+
+.csharp-text {
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    margin: auto;
+    text-align: center;
+    font-size: 40px;
+}
+
+.css-text {
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    margin: auto;
+    text-align: center;
+    font-size: 40px;
+}
+
+.html-text {
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    margin: auto;
+    text-align: center;
+    font-size: 40px;
+}
+
+.python-text {
+    color: #CAE8D5;
+    font-family: 'Trebuchet MS';
+    margin: auto;
+    text-align: center;
+    font-size: 40px;
+}
